# MaksiX

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-docker.txt  requirements.txt
.github/workflows/: snm_workflow.yml
Social Network MaksiX/: pyproject.toml  requirements.txt
Social Network MaksiX/.github/workflows/: snm_workflow.yml
Social Network MaksiX/config/: settings.py  urls.py
Social Network MaksiX/friends/: admin.py  models.py  serializers.py  services_friends.py  urls.py  views.py
Social Network MaksiX/friends/migrations/: 0001_initial.py  0002_initial.py  0003_alter_friend_options_alter_friend_unique_together_and_more.py
Social Network MaksiX/friends/tests/: test_api.py
Social Network MaksiX/music/: admin.py  models.py  serializer.py  services_music.py  urls.py  views.py
Social Network MaksiX/music/migrations/: 0001_initial.py  0002_alter_song_album.py  0002_initial.py  0003_alter_song_album.py  0003_alter_song_user.py
Social Network MaksiX/music/tests/: test_api.py
Social Network MaksiX/posts/: admin.py  models.py  serializer.py  services_posts.py  urls.py  views.py
Social Network MaksiX/posts/migrations/: 0001_initial.py  0002_initial.py
Social Network MaksiX/userdata/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  test.py  urls.py  views.py
Social Network MaksiX/userdata/migrations/: 0001_initial.py  0002_alter_userprofile_avatar.py
Social Network MaksiX/userdata/templates/userdata/: base.html  register.html
Social Network MaksiX/userdata/tests/: test_api.py
Social_Network_MaksiX/: permissions.py
Social_Network_MaksiX/config/: settings.py  urls.py
Social_Network_MaksiX/friends/: models.py  serializers.py  services_friends.py  urls.py
Social_Network_MaksiX/music/: models.py  serializer.py  services_music.py  urls.py  views.py
Social_Network_MaksiX/music/migrations/: 0002_initial.py
Social_Network_MaksiX/posts/: models.py  services_posts.py  urls.py  views.py
Social_Network_MaksiX/posts/migrations/: 0002_initial.py
Social_Network_MaksiX/posts/tests/: test_api.py
Social_Network_MaksiX/userdata/: services.py  urls.py  views.py
Social_Network_MaksiX/userdata/migrations/: 0002_alter_userprofile_avatar.py  0003_userprofile_is_activate.py
Social_Network_MaksiX/userdata/tests/: test_api.py
config/config/: settings.py  urls.py
config/friends/: admin.py  models.py  serializers.py  urls.py  views.py
config/friends/migrations/: 0001_initial.py
config/posts/: admin.py  models.py
config/userdata/: models.py  serializers.py  urls.py  views.py
config/userdata/migrations/: 0001_initial.py  0002_alter_userprofile_bio.py  0003_alter_userprofile_address_alter_userprofile_bio.py  0004_alter_userprofile_bio.py
